--- a/style.css
+++ b/style.css
@@ -119,14 +119,17 @@ h1 {
 
 #github:hover {
   color: #fff;
+  transform: scale(1.2); 
 }
 
 #twitter:hover {
   color: #0892e1;
+  transform: scale(1.2); 
 }
 
 #linkedin:hover {
   color: #0177b4;
+  transform: scale(1.2); 
 }
 
 .Card .icons i a {
