--- a/style.css
+++ b/style.css
@@ -174,27 +174,27 @@ h1 {
 
 /* Scroll */
 
-.scroll-container {
+#scrollTop {
   position: fixed;
-  right: 1rem;
-  bottom: 1rem;
-  width: 2.7rem;
-  height: 2.7rem;
+  background-color: #302f2f;
+  bottom: 20px;
+  right: 20px;
+  height: 50px;
+  width: 50px;
+  display: none;
+  place-items: center;
   border-radius: 50%;
-  background: rgb(128, 128, 255) url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 380 512'%3E%3Cpath fill='currentColor' d='M352 352c-8.188 0-16.38-3.125-22.62-9.375L192 205.3l-137.4 137.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25C368.4 348.9 360.2 352 352 352z'%3E%3C/path%3E%3C/svg%3E") center no-repeat;
-  opacity: 0.7;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.scroll-container:hover {
-  opacity: 0.8;
-}
-
-.scroll-container:focus {
-  opacity: 0.9;
-}
-
-.scroll-container:active {
-  opacity: 1;
+#scrollTop i {
+  display: grid;
+  align-items: center;
+  margin-left: 5px;
+  color: white;
+  font-size: 15px;
 }
 
 /* footer */
